# sembench-ko-fin

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  ci_smoke.yaml  full.yaml
configs/: ci_smoke.yaml  default.yaml  full.yaml
datasets/: manifest.yaml
datasets/adversarial/: L3_crossref.json  L4_regulatory.json
datasets/multi_turn/card/: L2_context.json
datasets/multi_turn/debt/: L2_context.json
datasets/multi_turn/insurance/: L2_context.json
datasets/single_turn/banking/: L1_basic.json  L2_reasoning.json
datasets/single_turn/card/: L1_basic.json  L2_reasoning.json
datasets/single_turn/debt/: L1_basic.json  L2_reasoning.json
datasets/single_turn/insurance/: L1_basic.json  L2_reasoning.json
datasets/single_turn/securities/: L1_basic.json  L2_reasoning.json
datasets/single_turn/tax/: L1_basic.json  L2_reasoning.json
docs/: adapter_guide.md  architecture.md  judge_calibration.md  judge_rubric.md  regulatory_mapping.md
results/: reference_report.html  reference_run.json
scripts/: check_dataset_pii.py
sembench/: __init__.py  cli.py
sembench/adapters/: base.py  cli_adapter.py  http_adapter.py
sembench/adapters/builtins/: passthrough.py  (+1 more)
sembench/compliance/: checker.py
sembench/core/: cost_guard.py  matrix.py  runner.py  schema.py
sembench/judge/: rubric.py
sembench/llm/: anthropic_provider.py  base.py  mock_provider.py
sembench/reporting/: html_report.py  leaderboard.py
templates/: dpia_template.md
tests/: test_adapters_and_reports.py  test_compliance.py  test_e2e_smoke.py  test_matrix.py  test_schema.py
(+3 files in other folders)
