[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sembench-ko-fin"
version = "0.1.0"
description = "Benchmark suite for semantic-preserving pseudonymization — Korean financial LLM context"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.26",
    "pydantic>=2.7",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.12",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
sembench = "sembench.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["sembench"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
